@@ -5,6 +5,7 @@
 * Added Model#solution which passes the first solution to a block and returns the result of that block.
 * Added Model#each_soltion which iterates over each solution.
 * Added boolean variables. They are created using Model#bool_var and Model#bool_var_array .
+* Added two options to constraints: propagation strength and reification variable.
 
 == Version 0.2.0
 
